--- a/index.html
+++ b/index.html
@@ -25,5 +25,28 @@
             <div class="image-placeholder">This is a placeholder for an image</div>
     </div>
     </div>
+
+    <div class="title">Some random information.</div>
+    <div class="info-container">
+        <div class="info">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+        </div>
+
+        <div class="info">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+        </div>
+
+        <div class="info">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+        </div>
+
+        <div class="info">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+        </div>
+    </div>
 </body>
 </html>
