Add fourth section structure and styling

--- a/index.html
+++ b/index.html
@@ -53,5 +53,14 @@
         <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="signed">Thor,God of Thunder</div>
     </div>
+
+    <div class="section-four">
+        <div class="action-box">
+            <div class="last-title">Call to action! It's time!
+                <div class="last-subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="sign-up">Sign Up</button>
+        </div>
+    </div>
 </body>
 </html>
