Add footer layout and styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Landing-page</title>
@@ -61,6 +61,10 @@
             </div>
             <button class="sign-up">Sign Up</button>
         </div>
+    </div>
+
+    <div class="footer-section">
+        <div class="footer-text">Copyright © The Odin Project 2021</div>
     </div>
 </body>
 </html>
